# router-sim

./: .gitignore  CMakeLists.txt  TODO.txt  params.json  topology.json
include/: addr.hpp  event_loop.hpp  fixed_queue.hpp  logger.hpp  packet.hpp  params.hpp  router.hpp
include/control_plane/: control.hpp  ospf.hpp
include/topology/: json_topology.hpp  topology.hpp
json_generator/: generate.py  generate_large.py  generate_topology.py  netsim_serialize.py  topology.json
src/: addr.cpp  event_loop.cpp  forwarding_table.cpp  logger.cpp  main.cpp  params.cpp  router.cpp
src/control_plane/: ospf.cpp
src/topology/: json_topology.cpp
test/: CMakeLists.txt  main_test.cpp  test_addr.cpp  test_fixed_queue.cpp  test_router.cpp
